--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
-
 project(mycalc LANGUAGES CXX)
 
-set(CMAKE_CXX_COMPILER "C:/msys64/mingw64/bin/c++.exe")
+set(CMAKE_CXX_COMPILER "c++.exe")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lvgl)
 link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lvgl/lib)
