--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
+set(CMAKE_CXX_COMPILER "g++")
 project(mycalc LANGUAGES CXX)
-
-set(CMAKE_CXX_COMPILER "c++.exe")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/lvgl)
 link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lvgl/lib)
